tests/neg/mixed_cc/B.scala
package mixed_cc
import language.experimental.captureChecking

val x: Object^{A.B} = ??? // error